--- a/project.json
+++ b/project.json
@@ -23,7 +23,10 @@
             "input": "public"
           }
         ],
-        "styles": ["./src/styles.scss"]
+        "styles": [
+          "./src/styles.scss",
+          "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+        ]
       },
       "configurations": {
         "production": {
